--- a/nuevoBarucck/css/style.css
+++ b/nuevoBarucck/css/style.css
@@ -537,7 +537,9 @@ footer .sub-footer ul{ float:left; margin-top:20px;}
 -ms-text-shadow: 3px 3px 4px rgba(0, 0, 0, 0.33);
 -o-text-shadow: 3px 3px 4px rgba(0, 0, 0, 0.33);
 text-shadow: 3px 3px 4px rgba(0, 0, 0, 0.33);}
-.info-service > h3.color-design { color: #072B37;}
+.large { text-align: center;}
+.large h3.font-large span{ color: #9DBEBB;}
+.large h3.font-large { color: #072B37; font-size: 6em; font-weight: 700; letter-spacing: -12px;}
 .info-service > p { color:#000; font-weight: 300; font-size: 1.9em; text-align: justify; line-height: 30px;}
 .info-service > p span.weight {  font-weight: 700;}
 .info-service > p span.weight-bold {  font-weight: 400;}
@@ -628,10 +630,10 @@ text-shadow: 3px 3px 4px rgba(0, 0, 0, 0.33);}
   z-index: 100;
 }
 #scroll-wrapper-inner{
-  z-index: 1001;
+  z-index: 1;
   position: fixed;
   bottom: 0;
-
+  right: 0;
 }
 
 #scroll-down {
@@ -645,13 +647,13 @@ text-shadow: 3px 3px 4px rgba(0, 0, 0, 0.33);}
     display: block;
     text-transform: uppercase;
     color: black;
-  font-family: "raleway";
-  font-size:14px;
-  font-weight:bold;
-  letter-spacing:0.4em;
-   text-align:center;
-   transform: rotate(90deg);
-  margin-bottom: 45px;
+    font-family: "raleway";
+    font-size:14px;
+    font-weight:bold;
+    letter-spacing:0.4em;
+    text-align:center;
+    transform: rotate(90deg);
+    margin-bottom: 45px;
 }
 #scroll-down::before {
     -webkit-animation: elasticus 2.9s cubic-bezier(1, 0, 0, 1) infinite;
@@ -875,8 +877,50 @@ text-shadow: 3px 3px 4px rgba(0, 0, 0, 0.33);}
         transform: scale(1, 0);
     }
 }
+.section .slide{
+  transform: scale(1);
+  transition: all ease-in-out 0.7s;
+}
+.section .slide:hover {
+  transform: scale(0.9);
+  background: #EFEFEF;
+  color: #fff;
+  box-shadow: 0px 2px 50px rgba(150,150,150,0.2);
+}
+
+svg text {
+  fill: #111;
+  stroke: #111;
+  fill-opacity: 1;
+  stroke-width: 0;
+  stroke-dasharray: 100% 0;
+  animation: stroke-offset 3s ease-out infinite;
+  animation-delay: 6s;
+}
+
+@keyframes stroke-offset {
+  0% {
+    fill-opacity: 0;
+    stroke-width: 0;
+    stroke-dasharray: 0% 100%;
+  }
+  25% {
+    stroke-width: 3px;
+  }
+  50% {
+    fill-opacity: 0;
+  }
+  75% {
+    stroke-width: 3px;
+  }
+  100% {
+    stroke-width: 0;
+  }
+}
 
 
+
+}
 
 
 
