--- a/nuevoBarucck/css/animate.css
+++ b/nuevoBarucck/css/animate.css
@@ -196,10 +196,11 @@ margin-left:200px;
 
 
 .animated {
-  -webkit-animation-duration: 0.4s;
-  animation-duration: 0.4s;
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
   -webkit-animation-fill-mode: both;
   animation-fill-mode: both;
+  animation-timing-function: ease-out;
 }
 
 .animated.hinge {
