--- a/nuevoBarucck/css/style.css
+++ b/nuevoBarucck/css/style.css
@@ -3,24 +3,13 @@
 @import url(http://fonts.googleapis.com/css?family=Lato:300,400,700,900&subset=latin,latin-ext);
 @import url(http://fonts.googleapis.com/css?family=Playfair+Display:400,700,400italic,700italic&subset=latin,latin-ext);
 @import url('https://fonts.googleapis.com/css?family=Montserrat|Calligraffitti:300,400,700,900');
-@font-face {
-    font-family: 'jaapokki';
-    src: url('../fonts/jaapokkienchance-regular-webfont.eot');
-    src: url('../fonts/jaapokkienchance-regular-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/jaapokkienchance-regular-webfont.woff2') format('woff2'),
-         url('../fonts/jaapokkienchance-regular-webfont.woff') format('woff'),
-         url('../fonts/jaapokkienchance-regular-webfont.ttf') format('truetype'),
-         url('../fonts/jaapokkienchance-regular-webfont.svg#jaapokki_enchanceregular') format('svg');
-    font-weight: normal;
-    font-style: normal;
 
-}
 
 
 
 *{ outline:none;}
 body{ margin:0; padding:0; background:#dcdde1; color:#1d1d1d; font-family: 'Lato', sans-serif; -webkit-font-smoothing: antialiased;}
-body, html{ height:100%;}
+body, html{ height:100%; overflow: hidden !important;}
 
 
 /* LINKS */
@@ -133,7 +122,7 @@ footer{ width:100%; float:left;}
 
 
 /* NAVBAR */
-.navbar-default{ width:100%; float:left; background:none; border:none; position:fixed; left:0; top:0; z-index:4; transform: translateY(-100%); padding: 10px 35px;}
+.navbar-default{ width:100%; float:left; background:none; border:none; position:fixed; left:0; top:0; z-index:1001; transform: translateY(-100%); padding: 10px 35px;}
 .navbar-default.no-index{ background-color: rgba(255,255,255,0.0);}
 .navbar-default{ -webkit-transition: .55s ease-in-out;-moz-transition: .55s ease-in-out;-ms-transition: .55s ease-in-out; -o-transition: .55s ease-in-out; transition: .55s ease-in-out; transition-delay: 1.5s;}
 .navbar-default ul {float:right; margin:10px 0; position:relative; top: 23px;}
@@ -166,11 +155,11 @@ footer{ width:100%; float:left;}
 	    -ms-transform: rotate(0deg);
 	     -o-transform: rotate(0deg);
 		transform: rotate(0deg);
-	-webkit-transition: .25s ease-in-out;
-	   -moz-transition: .25s ease-in-out;
-	    -ms-transition: .25s ease-in-out;
-	     -o-transition: .25s ease-in-out;
-		transition: .25s ease-in-out;}
+	-webkit-transition: .5s ease-in-out;
+	   -moz-transition: .5s ease-in-out;
+	    -ms-transition: .5s ease-in-out;
+	     -o-transition: .5s ease-in-out;
+		transition: .5s ease-in-out;}
 .hamburger-menu span:nth-child(1) {top: 20.5px;}
 .hamburger-menu span:nth-child(2),
 .hamburger-menu span:nth-child(3) {top: 28.5px;}
@@ -196,15 +185,15 @@ footer{ width:100%; float:left;}
 
 
 /* LITEBOX NAVIGATION */
-.navigation{ width:100%; height:100%; position:fixed; top:0; left:0; background:#fff; z-index:4; opacity:0; visibility:hidden; overflow-y:scroll;}
-.navigation{-webkit-transition: .25s ease-in-out;-moz-transition: .25s ease-in-out;-ms-transition: .25s ease-in-out; -o-transition: .25s ease-in-out; transition: .25s ease-in-out;}
+.navigation{ width:100%; height:100%; position:fixed; top:0; left:0; background:#fff; z-index:1001; opacity:0; visibility:hidden; overflow:hidden;}
+.navigation{-webkit-transition: 0.6s ease-in-out;-moz-transition: 0.6s ease-in-out;-ms-transition: 0.6s ease-in-out; -o-transition: 0.6s ease-in-out; transition: 0.6s ease-in-out;}
 .navigation.show-me{opacity:1; visibility:visible; overflow:visible;}
 .navigation .video-bg{ width:100%; height:100%; position:absolute; left:0; top:0; opacity:0.1; z-index:1; overflow:hidden;}
 .navigation .video-bg video{ min-width:100%; min-height:100%; position:absolute; left:0; top:0;}
 .navigation nav{ display:inline-block; position:relative; z-index:2;}
 .navigation nav ul{ width:100%; float:left; text-align:center; margin-left: 5px;}
 .navigation nav ul li{ width:100%; float:left; margin:10px 0; opacity:0; transform: translateY(-25px);}
-.navigation nav ul li{ -webkit-transition: .25s ease-in-out;-moz-transition: .25s ease-in-out;-ms-transition: .25s ease-in-out; -o-transition: .25s ease-in-out; transition: .25s ease-in-out;}
+.navigation nav ul li{ -webkit-transition: 0.6s ease-in-out;-moz-transition: 0.6s ease-in-out;-ms-transition: 0.6s ease-in-out; -o-transition: 0.6s ease-in-out; transition: 0.6s ease-in-out;}
 .navigation nav ul li:first-child { transition-delay: 0.05s;}
 .navigation nav ul li:nth-child(2){ transition-delay: 0.10s;}
 .navigation nav ul li:nth-child(3){ transition-delay: 0.15s;}
@@ -543,7 +532,7 @@ text-shadow: 3px 3px 4px rgba(0, 0, 0, 0.33);}
 .info-service > p { color:#000; font-weight: 300; font-size: 1.9em; text-align: justify; line-height: 30px;}
 .info-service > p span.weight {  font-weight: 700;}
 .info-service > p span.weight-bold {  font-weight: 400;}
-.info-service p > span.saltarin{  display: inline-block; -webkit-animation: bounce 1.5s ease infinite alternate; color: #031A6B; font-weight: 400;}
+.info-service p > span.saltarin{  display: inline-block; -webkit-animation: bounce 1.5s ease infinite alternate; color: #FF220C; font-weight: 400;}
 .gif .img { width: 25%;}
 
 
@@ -877,25 +866,18 @@ text-shadow: 3px 3px 4px rgba(0, 0, 0, 0.33);}
         transform: scale(1, 0);
     }
 }
-.section .slide{
-  transform: scale(1);
-  transition: all ease-in-out 0.7s;
-}
-.section .slide:hover {
-  transform: scale(0.9);
-  background: #EFEFEF;
-  color: #fff;
-  box-shadow: 0px 2px 50px rgba(150,150,150,0.2);
-}
 
-svg text {
-  fill: #111;
-  stroke: #111;
+svg text{
+  font-size:4em;
+  letter-spacing: -40px;
+}
+svg text.show-diseño {
+  fill: #D33E43;
+  stroke: #FF220C;
   fill-opacity: 1;
   stroke-width: 0;
   stroke-dasharray: 100% 0;
-  animation: stroke-offset 3s ease-out infinite;
-  animation-delay: 6s;
+  animation: stroke-offset 4s ease-out;
 }
 
 @keyframes stroke-offset {
